--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -13,3 +13,13 @@
   height: 800px;
   background-size:cover;
 }
+
+.index-content {
+  width: 600px;
+  height: 150px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  background-color: rgba(255,255,255,0.5);
+}
