--- a/app/views/member/homes/top.html.erb
+++ b/app/views/member/homes/top.html.erb
@@ -1,8 +1,8 @@
 <% if user_signed_in? %>
-<div class = "background_img ">
+<div class="background_img ">
   <div class="container">
-    <div class = "row">
-      <div class = "col offset-10 mt-2 mb-5">
+    <div class="row">
+      <div class="col offset-10 mt-2 mb-5">
         <p><button type="button" class="btn btn-outline-warning"><h2><%= link_to "食覧",posts_path %></h2></button></p>
       </div>
     </div>
@@ -31,12 +31,11 @@
   </div>
 </div>
 <% else %>
-<div class = "background">
+<div class="background">
   <div class='index-content text-center'>
     <h1 class='home-index mb-5'>デカ盛り・ビュー</h1></h1>
     <div class='index-btn d-flex justify-content-around'>
-      <%= link_to '新規登録', new_user_registration_path, class: "btn btn-success btn-lg" %>
-      <%= link_to 'ログイン', new_user_session_path, class: "btn btn-success btn-lg" %>
+      <%= link_to 'ゲストログイン',guest_sign_in_path,class: "btn btn-success btn-lg" ,method: :post %>
     </div>
   </div>
 </div>
