--- a/app/views/member/homes/top.html.erb
+++ b/app/views/member/homes/top.html.erb
@@ -35,6 +35,7 @@
   <div class='index-content text-center'>
     <h1 class='home-index mb-5'>デカ盛り・ビュー</h1></h1>
     <div class='index-btn d-flex justify-content-around'>
+      <%= link_to '新規登録', new_user_registration_path, class: "btn btn-success btn-lg" %>
       <%= link_to 'ゲストログイン',guest_sign_in_path,class: "btn btn-success btn-lg" ,method: :post %>
     </div>
   </div>
