--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -26,3 +26,18 @@
   width:      50px;
   height:     50px;
 }
+
+.flash-notifications {
+  font-weight: bold;
+  color: white;
+  text-align: center;
+
+  .notice {
+    background-color: #ADD8E6;
+  }
+
+  .alert {
+    background-color: #FF4500;
+  }
+
+  }
