--- a/app/views/member/homes/top.html.erb
+++ b/app/views/member/homes/top.html.erb
@@ -1,3 +1,9 @@
+<div class="flash-notifications">
+  <% flash.each do |key, value| %>
+   <%= content_tag(:div, value, class: key) %>
+  <% end %>
+</div>
+
 <% if user_signed_in? %>
 <div class="container">
   <div class="row">
