--- a/app/views/member/posts/edit.html.erb
+++ b/app/views/member/posts/edit.html.erb
@@ -15,6 +15,13 @@
     </div>
   </div>
 <%= form_with model:@post,url: post_path(@post.id),method: :patch do |f| %>
+  <div class = "row">
+    <div class = "col mt-4 mb-4">
+      <div class="field">
+        <%= f.file_field :images, multiple: true %>
+      </div>
+    </div>
+  </div>
   <div class="form-group ml-4">
     <label for="formGroupExampleInput">タイトル</label><br>
       <%= f.text_field :title, size: "110x50" %>
