--- a/app/views/member/posts/edit.html.erb
+++ b/app/views/member/posts/edit.html.erb
@@ -8,20 +8,13 @@
     </div>
   </div>
   <div class = "row">
-    <div class = "col mt-2 ml-4 mr-2 mb-4 ">
+    <div class = "col-6 mt-2 ml-4 mr-2 mb-4 ">
       <% @post.images.each do |image| %>
         <%= image_tag image,style: "height: 300px;object-fit:cover;" %>
       <% end %>
     </div>
   </div>
 <%= form_with model:@post,url: post_path(@post.id),method: :patch do |f| %>
-  <div class = "row">
-    <div class = "col mt-4 mb-4">
-      <div class="field">
-        <%= f.file_field :images, multiple: true %>
-      </div>
-    </div>
-  </div>
   <div class="form-group ml-4">
     <label for="formGroupExampleInput">タイトル</label><br>
       <%= f.text_field :title, size: "110x50" %>
